--- a/files/demos/Reversi/index.html
+++ b/files/demos/Reversi/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Reversi</title>
-	
+
 	<link href="reversi.css" type="text/css" rel="stylesheet" />
-	
+
 	<script type="text/javascript" src="util.js"></script>
 	<script type="text/javascript" src="reversi.js"></script>
 </head>
@@ -33,7 +33,7 @@
 
 <footer>
 	By <a href="http://leaverou.me">Lea Verou</a>
-	&bull; Don't try this with IE
+	• Don't try this with IE
 </footer>
 </body>
 </html>
