--- a/files/wdclass/lab1/index.html
+++ b/files/wdclass/lab1/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>John Doe</title>
-	
+
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -13,23 +13,23 @@
 
 <div id="content">
 	<h2>About me</h2>
-	
+
 	<img src="images/pic2.png" alt="Picture of myself at a party">
-	
+
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut mollis urna. Cras vestibulum urna non purus rhoncus semper. Duis eu nulla sit amet enim euismod dapibus. Sed blandit vehicula nisl luctus dictum. Sed mollis, erat at hendrerit condimentum, ante felis volutpat erat, vel dictum sapien turpis eu ante. 
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut mollis urna. Cras vestibulum urna non purus rhoncus semper. Duis eu nulla sit amet enim euismod dapibus. Sed blandit vehicula nisl luctus dictum. Sed mollis, erat at hendrerit condimentum, ante felis volutpat erat, vel dictum sapien turpis eu ante.
 	</p>
-	
+
 	<img src="images/pic.png" alt="Picture of myself after a meeting with a client">
-	
+
 	<p>
-		In sagittis lectus vel metus rhoncus a pharetra mi porta. Integer ac elit massa, in tincidunt arcu. Cras condimentum mattis orci, quis viverra erat scelerisque et. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condimentum sollicitudin dolor, vitae tincidunt libero porttitor vel.Nullam imperdiet turpis in odio dictum non auctor eros cursus. 
+		In sagittis lectus vel metus rhoncus a pharetra mi porta. Integer ac elit massa, in tincidunt arcu. Cras condimentum mattis orci, quis viverra erat scelerisque et. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condimentum sollicitudin dolor, vitae tincidunt libero porttitor vel.Nullam imperdiet turpis in odio dictum non auctor eros cursus.
 	</p>
-	
+
 	<p>
 		For more extensive info, you may download my CV: <a href="cv.pdf" hreflang="en">cv.pdf</a>
 	</p>
-	
+
 	<h2>Contact</h2>
 	<p>Fill in the following form to contact me via email:</p>
 	<form action="contact.php" method="post" id="contactform">
@@ -84,13 +84,13 @@
 		<dl>
 			<dt>Name</dt>
 			<dd>John Doe</dd>
-			
+
 			<dt>Age</dt>
 			<dd>25</dd>
-			
+
 			<dt>Occupation</dt>
 			<dd>Web developer</dd>
-			
+
 			<dt>Location</dt>
 			<dd>Athens, GR</dd>
 		</dl>
@@ -136,9 +136,9 @@
 <div id="footer">
 	<p>
 		&copy;2010 <abbr title="Athens University of Economics & Business">A.U.E.B.</abbr>
-		&bull; The color palette is <a href="http://kuler.adobe.com/#themeID/809489">Park I</a>
-		&bull; Small icons from <a href="http://famfamfam.com/">famfamfam</a>
-		&bull; Cartoons from <a href="http://theoatmeal.com/">The Oatmeal</a>
+		• The color palette is <a href="http://kuler.adobe.com/#themeID/809489">Park I</a>
+		• Small icons from <a href="http://famfamfam.com/">famfamfam</a>
+		• Cartoons from <a href="http://theoatmeal.com/">The Oatmeal</a>
 	</p>
 </div>
 
